Thu Jun 30 22:38:58 2011  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm2_defined_method.rb: added to measure performance of
	  bmethod (method defined by define_method()).

Thu Jun 30 22:17:04 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_bmethod): fix to hook call/return event
	  for methods defined by define_method().  fixes Bug #4613.

	* thread.c (call_trace_proc): Fix to skip if class is not given (0).
	  Note that ID and Class object are passed for call/return event
	  if the called method was defined by define_method().
	  If you are author of tracer/profiler/debugger, this may be an
	  important change.  You should check passed class as zero or
	  non-zero instead of checking the event type.

	* test/ruby/test_settracefunc.rb: add a test for above.

Thu Jun 30 21:18:35 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* configure.in: Add warnflags for XL/C on AIX during configure
	  to avoid [Bug #3971]. See [ruby-core:32859]

Thu Jun 30 21:16:04 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (m_ajd): refers a constant.

Thu Jun 30 20:54:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	  * ext/io/console/io-console.gemspec: spin-off gem for 1.9.2.

Thu Jun 30 20:36:23 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: trivial changes.

Thu Jun 30 20:12:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_module.rb: tests for [Bug #3422] and [Bug #3423].

Thu Jun 30 20:03:39 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: modified doc.

Thu Jun 30 19:09:19 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (thread_timer): ignore unknown errno.
	  (we observed that select(2) was canceled by errno=514 on
	  boron == Linux/Xen environment)

Thu Jun 30 17:33:25 2011  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (ObjectSpace.count_tdata_objects):
	  Fix rdoc.  Fixes Bug #3892.

	* ext/objspace/objspace.c (ObjectSpace.count_tdata_objects):